--- a/index.html
+++ b/index.html
@@ -6,11 +6,27 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Image_Slider</title>
     <link rel="stylesheet" href="css/style.css" />
+    <script
+      src="https://kit.fontawesome.com/3c4493b5f6.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
-    <div class="contents content">
-      <div class="content__title">image slider</div>
-      <div class="content__image-slider"></div>
+    <div class="slider-title">image slider</div>
+    <div class="slider-content">
+      <i class="fas fa-arrow-left prevBtn"></i>
+      <i class="fas fa-arrow-right nextBtn"></i>
+      <div class="slider-images">
+        <img src="images/5.jpg" class="last-image" />
+        <img src="images/1.jpg" class="" />
+        <img src="images/2.jpg" class="" />
+        <img src="images/3.jpg" class="" />
+        <img src="images/4.jpg" class="" />
+        <img src="images/5.jpg" class="" />
+        <img src="images/1.jpg" class="first-image" />
+      </div>
     </div>
+
+    <script src="js/app.js"></script>
   </body>
 </html>
