moved up slider-dots

--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
     <div class="slider-content">
       <i class="fas fa-arrow-left prevBtn"></i>
       <i class="fas fa-arrow-right nextBtn"></i>
+      <div class="slider-dots dots">
+        <div class="dots-container">
+          <div class="slider-dot"></div>
+          <div class="slider-dot"></div>
+          <div class="slider-dot"></div>
+          <div class="slider-dot"></div>
+          <div class="slider-dot"></div>
+        </div>
+      </div>
       <div class="slider-images">
         <img src="images/5.jpg" class="last-image" />
         <img src="images/1.jpg" class="" />
