--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Image_Slider</title>
     <link rel="stylesheet" href="css/style.css" />
+    <link
+      rel="stylesheet"
+      href="css/test.css"
+      media="screen and (min-device-width : 320px) and (max-device-width : 480px)"
+    />
     <script
       src="https://kit.fontawesome.com/3c4493b5f6.js"
       crossorigin="anonymous"
